--- a/Blazor.WEB/Layout/NavMenu.razor
+++ b/Blazor.WEB/Layout/NavMenu.razor
@@ -21,7 +21,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/countries">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Paises
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Paisees
             </NavLink>
         </div>
     </nav>
